--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,25 @@ services:
     networks:
       - elk
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - elk
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - elk
+
+
 networks:
   elk:
     driver: bridge
